--- a/blog/templates/archive.html
+++ b/blog/templates/archive.html
@@ -1,4 +1,10 @@
 <!-- archive.html -->
+<form action="/blog/create/" method=post>{% csrf_token%}
+    <table>{{ form }}</table><br>
+    <input type=submit>
+</form>
+<hr>
+
 {% for post in posts %}
     <h2>{{ post.title }}</h2>
     <h2>{{ post.timestamp }}</h2>
