--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,5 +1,6 @@
 <!-- base.html -->
 <!--Generic Welcome to your web page [Login - Help - FAQ]-->
+<body>
 <div class="navbar navbar-fixed-top" id="navbar">
     <div class="navbar-inner">
         <div class="container">
@@ -7,20 +8,13 @@
             <ul class="nav">
                 <li class="nav-item "><a href="http://readfree.me/gutenberg/">古腾堡</a></li>
             </ul>
-
             <ul class="nav pull-right">
-
-
                 <li class="nav-item"><a href="http://readfree.me/accounts/settings/pro/"><i class="fa fa-rocket"></i><span class="visible-large">升级</span></a></li>
-
-
                 <li class="nav-item "><a href="http://readfree.me/upload/"><i class="fa fa-upload" aria-hidden="true"></i><span class="visible-large">上传</span></a></li>
-
                 <li class="nav-item ">
                     <a href="http://readfree.me/notifications/">
                         <i class="fa fa-bell" aria-hidden="true"></i>
                         <span class="visible-large">通知</span>
-
                     </a>
                 </li>
                 <li class="dropdown">
@@ -32,7 +26,6 @@
                             <b class="caret"></b>
                         </a>
                         <ul id='account-dropdown' class="dropdown-menu">
-
                             <li><a href="/accounts/profile/elevenl/wish/"><i class="icon-user" aria-hidden="true"></i>个人中心</a></li>
                             <li><a href="/accounts/settings/push/"><i class="icon-cog"></i> 设置</a></li>
                             <li><a href="/faq/"><i class="icon-question-sign"></i> 常见问题</a></li>
@@ -41,7 +34,6 @@
                             <li><a href="/accounts/logout/?next=/"><i class="icon-off"></i> 退出</a></li>
                         </ul>
                 </li>
-
             </ul>
         </div>
     </div>
