--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,6 +1,11 @@
 <!-- index.html -->
 {% extends "base.html" %}
 {% block content %}
+    <form action="/blog/create/" method=post>{% csrf_token %}
+        <table>{{ form }}</table><br>
+        <input type=submit>
+    </form>
+    <hr>
     {% for post in posts %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.timestamp }}</p>
