--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -11,7 +11,7 @@
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Reading</a>
+      <a class="navbar-brand">Reading</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
@@ -21,101 +21,216 @@
       </ul>
    </div>
 </nav>
-<div class="row">
+
+<div style="padding: 50px 200px 10px;">
+   <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
+      <div class="row">
+         <div class="col-lg-6">
+            <div class="input-group">
+               <input  name="q" value="" placeholder="书名/作者" type="text"  class="form-control">
+               <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">搜索</button>
+               </span>
+            </div>
+         </div>
+      </div>
+   </form>
+</div>
+
+<div class="row" style="padding-top:25px;padding-bottom:50px;padding-right:200px;padding-left:200px;">
    <div class="col-sm-6 col-md-3">
-      <div class="well well-lg">
-      <div class="thumbnail">
-         <img src="/wp-content/uploads/2014/06/kittens.jpg"
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>书名</h3>
-         <p>作者</p>
+         <h3>The Riddle of</h3>
+         <p>Fox, Margalit</p>
          <p>
-            <a href="#" class="btn btn-primary" role="button">
-               推送            </a>
-            <a href="#" class="btn btn-default" role="button">
-               下载            </a>
-            <span class="badge">50</span>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
          </p>
       </div>
       </div>
    </div>
    <div class="col-sm-6 col-md-3">
-      <div class="well well-lg">
-      <div class="thumbnail">
-         <img src="/wp-content/uploads/2014/06/kittens.jpg"
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>缩略图标签</h3>
-         <p>一些示例文本。一些示例文本。</p>
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
          <p>
-            <a href="#" class="btn btn-primary" role="button">
-               按钮            </a>
-            <a href="#" class="btn btn-default" role="button">
-               按钮            </a>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
          </p>
       </div>
       </div>
    </div>
    <div class="col-sm-6 col-md-3">
-      <div class="well well-lg">
-      <div class="thumbnail">
-         <img src="/wp-content/uploads/2014/06/kittens.jpg"
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>缩略图标签</h3>
-         <p>一些示例文本。一些示例文本。</p>
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
          <p>
-            <a href="#" class="btn btn-primary" role="button">
-               按钮            </a>
-            <a href="#" class="btn btn-default" role="button">
-               按钮            </a>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
          </p>
       </div>
       </div>
    </div>
    <div class="col-sm-6 col-md-3">
-      <div class="well well-lg">
-      <div class="thumbnail">
-         <img src="/wp-content/uploads/2014/06/kittens.jpg"
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>缩略图标签</h3>
-         <p>一些示例文本。一些示例文本。</p>
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
          <p>
-            <a href="#" class="btn btn-primary" role="button">
-               按钮            </a>
-            <a href="#" class="btn btn-default" role="button">
-               按钮            </a>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
          </p>
       </div>
       </div>
    </div>
    <div class="col-sm-6 col-md-3">
-      <div class="well well-lg">
-      <div class="thumbnail">
-         <img src="/wp-content/uploads/2014/06/kittens.jpg"
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>缩略图标签</h3>
-         <p>一些示例文本。一些示例文本。</p>
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
          <p>
-            <a href="#" class="btn btn-primary" role="button">
-               按钮            </a>
-            <a href="#" class="btn btn-default" role="button">
-               按钮            </a>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <h3>The Riddle</h3>
+         <p>>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
          </p>
       </div>
       </div>
    </div>
 </div>
 
-
+<nav style="text-align: center">
+<ul class="pagination">
+   <li><a href="#">&laquo;</a></li>
+   <li class="active"><a href="#">1</a></li>
+   <li class="disabled"><a href="#">2</a></li>
+   <li><a href="#">3</a></li>
+   <li><a href="#">4</a></li>
+   <li><a href="#">5</a></li>
+   <li><a href="#">&raquo;</a></li>
+</ul>
+</nav>
 
 </body>
 </html>
