--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bootstrap 实例 - 默认的导航栏</title>
    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <script src="scripts/jquery.min.js"></script>
@@ -37,15 +38,17 @@
    </form>
 </div>
 
-<div class="row" style="padding-top:25px;padding-bottom:50px;padding-right:200px;padding-left:200px;">
+<div class="row" style="padding-top:25px;padding-bottom:50px;padding-right:100px;padding-left:100px;">
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
-      <div class="book-cover">
-         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+      <div class="book-cover clearfix">
+         <a>
+         <img class="img-rounded img-responsive" src="http://readfree.me/media/covers/2017/09/08/%E6%BC%AB%E7%94%BB%E6%88%91%E4%BB%AC%E7%9A%84%E6%80%A7.PNG"
          alt="通用的占位符缩略图">
+         </a>
       </div>
       <div class="caption">
-         <h3>The Riddle of</h3>
+         <p>中文字符的长度有多长在唱一点</p>
          <p>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
@@ -58,12 +61,12 @@
    </div>
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
-      <div class="book-cover">
-         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+      <div class="book-cover clearfix">
+         <img class="img-rounded img-responsive" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>The Riddle</h3>
+         <p>The Riddle jkahdja</p>
          <p>>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
@@ -76,12 +79,12 @@
    </div>
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
-      <div class="book-cover">
+      <div class="book-cover clearfix">
          <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>The Riddle</h3>
+         <p>The Riddle</p>
          <p>>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
@@ -94,7 +97,7 @@
    </div>
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
-      <div class="book-cover">
+      <div class="book-cover clearfix">
          <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
