--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -23,7 +23,7 @@
    </div>
 </nav>
 
-<div style="padding: 50px 200px 10px;">
+<div style="padding: 50px 100px 10px;">
    <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
       <div class="row">
          <div class="col-lg-6">
@@ -43,12 +43,15 @@
       <div class="well book-card">
       <div class="book-cover clearfix">
          <a>
-         <img class="img-rounded img-responsive" src="http://readfree.me/media/covers/2017/09/08/%E6%BC%AB%E7%94%BB%E6%88%91%E4%BB%AC%E7%9A%84%E6%80%A7.PNG"
+         <img style="height:150px;" class="img-rounded img-responsive" src="http://readfree.me/media/covers/2017/09/08/%E6%BC%AB%E7%94%BB%E6%88%91%E4%BB%AC%E7%9A%84%E6%80%A7.PNG"
          alt="通用的占位符缩略图">
          </a>
       </div>
       <div class="caption">
-         <p>中文字符的长度有多长在唱一点</p>
+         <p style="width: 200px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;">中文字符的数据库哈啥都看长度有多长在唱一点</p>
          <p>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
