--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bootstrap 实例 - 默认的导航栏</title>
    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <link href="bootstrap/css/mystyle.css" rel="stylesheet">
    <script src="scripts/jquery.min.js"></script>
    <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
@@ -12,7 +13,7 @@
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand">Reading</a>
+      <a class="navbar-brand">阅钉Reading</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
@@ -23,7 +24,7 @@
    </div>
 </nav>
 
-<div style="padding: 50px 100px 10px;">
+<div class="search-bar" style="padding: 50px 100px 10px;">
    <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
       <div class="row">
          <div class="col-lg-6">
@@ -38,21 +39,18 @@
    </form>
 </div>
 
-<div class="row" style="padding-top:25px;padding-bottom:50px;padding-right:100px;padding-left:100px;">
+<div class="row book-li">
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
       <div class="book-cover clearfix">
          <a>
-         <img style="height:150px;" class="img-rounded img-responsive" src="http://readfree.me/media/covers/2017/09/08/%E6%BC%AB%E7%94%BB%E6%88%91%E4%BB%AC%E7%9A%84%E6%80%A7.PNG"
+         <img class="img-rounded img-responsive" src="http://readfree.me/media/covers/2017/09/08/%E6%BC%AB%E7%94%BB%E6%88%91%E4%BB%AC%E7%9A%84%E6%80%A7.PNG"
          alt="通用的占位符缩略图">
          </a>
       </div>
       <div class="caption">
-         <p style="width: 200px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;">中文字符的数据库哈啥都看长度有多长在唱一点</p>
-         <p>Fox, Margalit</p>
+         <p class="book-name">中文字符的数据库哈啥都看长度有多长在唱一点</p>
+         <p class="book-author">Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
                <i class="fa fa-download" aria-hidden="true"></i>下载
@@ -69,8 +67,26 @@
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <p>The Riddle jkahdja</p>
-         <p>>Fox, Margalit</p>
+         <p class="book-name">The Riddle jkahdja</p>
+         <p>Fox, Margalit</p>
+         <p>
+            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
+               <i class="fa fa-download" aria-hidden="true"></i>下载
+            </a>
+            <span class="badge pull-right", title="豆瓣评分">50</span>
+         </p>
+      </div>
+      </div>
+   </div>
+   <div class="col-sm-6 col-md-3">
+      <div class="well book-card">
+      <div class="book-cover clearfix">
+         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
+         alt="通用的占位符缩略图">
+      </div>
+      <div class="caption">
+         <p class="book-name">The Riddle</p>
+         <p>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
                <i class="fa fa-download" aria-hidden="true"></i>下载
@@ -100,12 +116,12 @@
    </div>
    <div class="col-sm-6 col-md-3">
       <div class="well book-card">
-      <div class="book-cover clearfix">
+      <div class="book-cover">
          <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>The Riddle</h3>
+         <p>The Riddle</p>
          <p>>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
@@ -123,25 +139,7 @@
          alt="通用的占位符缩略图">
       </div>
       <div class="caption">
-         <h3>The Riddle</h3>
-         <p>>Fox, Margalit</p>
-         <p>
-            <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
-               <i class="fa fa-download" aria-hidden="true"></i>下载
-            </a>
-            <span class="badge pull-right", title="豆瓣评分">50</span>
-         </p>
-      </div>
-      </div>
-   </div>
-   <div class="col-sm-6 col-md-3">
-      <div class="well book-card">
-      <div class="book-cover">
-         <img class="img-rounded" src="https://img3.doubanio.com/mpic/s24526743.jpg"
-         alt="通用的占位符缩略图">
-      </div>
-      <div class="caption">
-         <h3>The Riddle</h3>
+         <p>The Riddle</p>
          <p>>Fox, Margalit</p>
          <p>
             <a class='book-down btn btn-mini btn-success' href="http://readfree.me/edition/53d6921ecb6d90a1658bced207a2f6ce/down/%E6%A0%BC%E5%BC%8F%E5%A1%94%E5%BF%83%E7%90%86%E5%AD%A6%E5%8E%9F%E7%90%86-_Ku_Er_Te__Kao_Fu_Qia.txt">
