--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -24,7 +24,7 @@
    </div>
 </nav>
 
-<div class="search-bar" style="padding: 50px 100px 10px;">
+<div class="search-bar">
    <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
       <div class="row">
          <div class="col-lg-6">
