--- a/blog/templates/testbootstrap.html
+++ b/blog/templates/testbootstrap.html
@@ -4,9 +4,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bootstrap 实例 - 默认的导航栏</title>
-   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <script src="scripts/jquery.min.js"></script>
-   <script src="bootstrap/js/bootstrap.min.js"></script>
+   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <script src="/scripts/jquery.min.js"></script>
+   <script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <!--导航栏-->
