--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Reading</title>
-   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <link href="bootstrap/css/mystyle.css" rel="stylesheet">
-   <script src="scripts/jquery.min.js"></script>
-   <script src="bootstrap/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reading</title>
+    {% load static %}
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/css/mystyle.css %}" rel="stylesheet">
+    <script src="{% static 'scripts/jquery.min.js' %}"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
 <!--导航栏-->
