--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static '/css/mystyle.css' %}" rel="stylesheet">
-    <script src="{% static '/scripts/jquery.min.js' %}"></script>
+    <script src="{% static '/scripts/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static '/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
