--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -25,19 +25,15 @@
     {% endfor %}
     </div>
 
-<div class="pagination">
-    <span class="step-links">
-        {% if book.has_previous %}
-            <a href="?page={{ book.previous_page_number }}">previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ book.number }} of {{ book.paginator.num_pages }}.
-        </span>
-
-        {% if book.has_next %}
-            <a href="?page={{ book.next_page_number }}">next</a>
-        {% endif %}
-    </span>
-</div>
+<nav style="text-align: center">
+<ul class="pagination">
+   <li><a href="#">&laquo;</a></li>
+   <li class="active"><a href="?page=1">1</a></li>
+   <li><a href="?page=2">2</a></li>
+   <li><a href="?page=3">3</a></li>
+   <li><a href="?page=4">4</a></li>
+   <li><a href="?page=5">5</a></li>
+   <li><a href="?page=6">&raquo;</a></li>
+</ul>
+</nav>
 {% endblock %}
