modify base.html in reading

--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -33,7 +33,7 @@
    <li><a href="?page=3">3</a></li>
    <li><a href="?page=4">4</a></li>
    <li><a href="?page=5">5</a></li>
-   <li><a href="?page=6">&raquo;</a></li>
+   <li><a href="?page={{ cpage }}">&raquo;</a></li>
 </ul>
 </nav>
 {% endblock %}
