--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -11,7 +11,7 @@
                     </a>
                 </div>
                 <div class="caption">
-                    <p class="book-name" title="{{ book.name }}">{{ book.name }}</p>
+                    <h3 class="book-name" title="{{ book.name }}">{{ book.name }}</h3>
                     <p class="book-author">{{ book.author }}</p>
                     <p>
                         <a class='book-down btn btn-mini btn-success' href="{{ book.path }}">
