--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -28,12 +28,12 @@
 <nav style="text-align: center">
 <ul class="pagination">
    <li><a href="#">&laquo;</a></li>
-   <li class="active"><a href="/reading/?page=1">1</a></li>
-   <li><a href="/reading/?page=2">2</a></li>
-   <li><a href="/reading/?page=3">3</a></li>
-   <li><a href="/reading/?page=4">4</a></li>
-   <li><a href="/reading/?page=5">5</a></li>
-   <li><a href="/reading/?page={{ cpage }}">&raquo;</a></li>
+   <li class="active"><a href="page/?p=1">1</a></li>
+   <li><a href="page/?p=2">2</a></li>
+   <li><a href="page/?=3">3</a></li>
+   <li><a href="page/?=4">4</a></li>
+   <li><a href="page/?=5">5</a></li>
+   <li><a href="page/?p={{ cpage }}">&raquo;</a></li>
 </ul>
 </nav>
 {% endblock %}
