modify base.html in reading

--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -30,9 +30,9 @@
    <li><a href="#">&laquo;</a></li>
    <li class="active"><a href="page/?p=1">1</a></li>
    <li><a href="page/?p=2">2</a></li>
-   <li><a href="page/?=3">3</a></li>
-   <li><a href="page/?=4">4</a></li>
-   <li><a href="page/?=5">5</a></li>
+   <li><a href="page/?p=3">3</a></li>
+   <li><a href="page/?p=4">4</a></li>
+   <li><a href="page/?p=5">5</a></li>
    <li><a href="page/?p={{ cpage }}">&raquo;</a></li>
 </ul>
 </nav>
