modify base.html in reading

--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -27,13 +27,15 @@
 
 <nav style="text-align: center">
 <ul class="pagination">
-   <li><a href="#">&laquo;</a></li>
-   <li class="active"><a href="?page=1">1</a></li>
-   <li><a href="?page=2">2</a></li>
-   <li><a href="?page=3">3</a></li>
-   <li><a href="?page=4">4</a></li>
-   <li><a href="?page=5">5</a></li>
-   <li><a href="?page={{ cpage }}">&raquo;</a></li>
+    <li><a href="?page={{ p_page }}">&laquo;</a></li>
+    {% for p in page_list %}
+        {% if p == cur_page %}
+            <li class="active"><a href="?page={{ p }}">{{ p }}</a></li>
+        {% else %}
+            <li><a href="?page={{ p }}">{{ p }}</a></li>
+        {% endif %}
+    {% endfor %}
+   <li><a href="?page={{ n_page }}">&raquo;</a></li>
 </ul>
 </nav>
 {% endblock %}
