modify base.html in reading

--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -25,6 +25,7 @@
     {% endfor %}
     </div>
 
+<!--分页已完成-->
 <nav style="text-align: center">
 <ul class="pagination">
     <li><a href="?page={{ p_page }}">&laquo;</a></li>
