modify base.html in reading

--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -32,7 +32,7 @@
             <div class="input-group">
                <input  name="q" value="" placeholder="书名/作者" type="text"  class="form-control">
                <span class="input-group-btn">
-                  <button class="btn btn-default" type="button">搜索</button>
+                  <button class="btn btn-default" type="submit">搜索</button>
                </span>
             </div>
          </div>
