--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -14,7 +14,7 @@
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand">阅钉Reading</a>
+      <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
