add search in reading

--- a/reading/templates/search.html
+++ b/reading/templates/search.html
@@ -29,17 +29,17 @@
 <nav style="text-align: center">
 <ul class="pagination">
     {% if p_page != '' %}
-        <li><a href="?page={{ p_page }}&?q={{ name_kw }}">&laquo;</a></li>
+        <li><a href="?page={{ p_page }}&q={{ name_kw }}">&laquo;</a></li>
     {% endif %}
     {% for p in page_list %}
         {% if p == cur_page %}
-            <li class="active"><a href="?page={{ p }}&?q={{ name_kw }}">{{ p }}</a></li>
+            <li class="active"><a href="?page={{ p }}&q={{ name_kw }}">{{ p }}</a></li>
         {% else %}
-            <li><a href="?page={{ p }}&?q={{ name_kw }}">{{ p }}</a></li>
+            <li><a href="?page={{ p }}&q={{ name_kw }}">{{ p }}</a></li>
         {% endif %}
     {% endfor %}
     {% if n_page != '' %}
-        <li><a href="?page={{ n_page }}&?q={{ name_kw }}">&raquo;</a></li>
+        <li><a href="?page={{ n_page }}&q={{ name_kw }}">&raquo;</a></li>
     {% endif %}
 </ul>
 </nav>
