--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -31,36 +31,33 @@
             <div class="form-group">
                <label for="inputUserName" class="col-sm-2 control-label">用户名：</label>
                   <div class="col-sm-4">
-                     <input type="username" class="form-control" id="inputUserName" placeholder="仅允许小写字母，数字和短横, 4~20个字符.">
+                     <input type="username" class="form-control" required id="inputUserName" placeholder="仅允许小写字母，数字和短横, 4~20个字符.">
                   </div>
             </div>
             <div class="form-group">
                <label for="inputeMail" class="col-sm-2 control-label">邮箱：</label>
                   <div class="col-sm-4">
-                     <input type="email" class="form-control" id="inputeMail">
+                     <input type="email" class="form-control" required id="inputeMail">
                   </div>
             </div>
             <div class="form-group">
                <label for="inputPassword1" class="col-sm-2 control-label">密码：</label>
                   <div class="col-sm-4">
-                     <input type="password1" class="form-control" id="inputPassword1">
+                     <input type="password1" class="form-control" required id="inputPassword1">
                   </div>
             </div>
             <div class="form-group">
                <label for="inputPassword2" class="col-sm-2 control-label">确认密码：</label>
                   <div class="col-sm-4">
-                     <input type="password2" class="form-control" id="inputPassword2">
+                     <input type="password2" class="form-control" required id="inputPassword2">
                   </div>
             </div>
             <div class="form-action">
-               <div class="col-sm-4">
-                  <button type="button" class="btn btn-primary">原始按钮</button>
+               <div class="col-sm-4" style="float:none;display:block;margin-left:auto;margin-right:auto;">
+                  <button type="submit" class="btn btn-primary">注册</button>
                </div>
             </div>
          </form>
-      </div>
-      <div class="span4 right">
-         <ul class='unstyled book-index'></ul>
       </div>
    </div>
 </div>
