--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -43,13 +43,13 @@
             <div class="form-group">
                <label for="inputPassword1" class="col-sm-2 control-label">密码：</label>
                   <div class="col-sm-4">
-                     <input type="password1" class="form-control" required id="inputPassword1">
+                     <input type="password" name="password1" class="form-control" required id="inputPassword1">
                   </div>
             </div>
             <div class="form-group">
                <label for="inputPassword2" class="col-sm-2 control-label">确认密码：</label>
                   <div class="col-sm-4">
-                     <input type="password2" class="form-control" required id="inputPassword2">
+                     <input type="password" name="password2" class="form-control" required id="inputPassword2">
                   </div>
             </div>
             <div class="form-action">
