--- a/reading/templates/register.html
+++ b/reading/templates/register.html
@@ -28,7 +28,7 @@
 <div id="container" class='container'>
    <div class="row">
       <div class="span8 left">
-         <form action  class="form form-horizontal" role="form" method="post">
+         <form action  class="form form-horizontal" role="form" method="post">{% csrf_token %}
             <div class="form-group">
                <label for="inputUserName" class="col-sm-2 control-label">用户名：</label>
                   <div class="col-sm-4">
