--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -14,7 +14,14 @@ body div.book-li {
 }
 
 .book-card h5.book-name {
-    width: 100%;
+    width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.book-card p.book-author {
+    width: 150px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
