add search in reading

--- a/reading/templates/search.html
+++ b/reading/templates/search.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row book-li">
     {% for book in books %}
-        <div class="col-sm-6 col-md-2">
+        <div class="col-xs-6 col-md-2">
             <div class="well book-card">
                 <div class="book-cover clearfix">
                     <a>
