add search in reading

--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="caption">
                     <p class="book-name" title="{{ book.name }}">{{ book.name }}</p>
-                    <p class="book-author">{{ book.author }}</p>
+                    <p class="book-author" title="{{ book.author }}">{{ book.author }}</p>
                     <p>
                         <a class='book-down btn btn-mini btn-success' href="{{ book.path }}">
                             <i class="fa fa-download" aria-hidden="true"></i>下载
