--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -1,6 +1,20 @@
 <!-- index.html -->
 {% extends "base.html" %}
 {% block content %}
+    <div class="search-bar">
+        <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <input  name="q" value="" placeholder="书名/作者" type="text"  class="form-control">
+                        <span class="input-group-btn">
+                        <button class="btn btn-default" type="submit">搜索</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
     <div class="row book-li">
     {% for book in books %}
         <div class="col-xs-6 col-md-2">
