add search in reading

--- a/reading/templates/search.html
+++ b/reading/templates/search.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="input-group">
-                        <input  name="q" value="" placeholder="书名/作者" type="text"  class="form-control">
+                        <input  name="q" value="{{name_kw}}" placeholder="书名/作者" type="text"  class="form-control">
                         <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">搜索</button>
                         </span>
