--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -36,9 +36,9 @@
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputPassword1" class="col-sm-2 control-label">密码：</label>
+               <label for="inputPassword" class="col-sm-2 control-label">密码：</label>
                   <div class="col-sm-4">
-                     <input type="password" name="password1" class="form-control" required id="inputPassword1">
+                     <input type="password" name="password" class="form-control" required id="inputPassword">
                   </div>
             </div>
             <ul class="errorlist">
