--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -29,7 +29,7 @@
                     <p class="book-name" title="{{ book.name }}">{{ book.name }}</p>
                     <p class="book-author" title="{{ book.author }}">{{ book.author }}</p>
                     <p>
-                        <a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ book.path }}">
+                        <a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ book.name }}">
                             <i class="fa fa-download" aria-hidden="true"></i>上传
                         </a>
                         <span class="badge pull-right", title="评分">{{ book.score }}</span>
