--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -18,8 +18,8 @@
    </div>
    <div>
       <ul class="nav navbar-nav pull-right">
-         <li><a href="/login">登录</a></li>
-         <li class="active"><a href="/register">注册</a></li>
+         <li class="active"><a href="/login">登录</a></li>
+         <li><a href="/register">注册</a></li>
       </ul>
    </div>
 </nav>
