--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading</title>
+    <meta name="description" content="免费电子书下载">
+    <meta name="keywords" content="Kindle,eBook,Read,Free,Push,mobi,pdf,免费,阅读,电子书">
     {% load static %}
     <link href="{% static '/reading/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static '/reading/css/mystyle.css' %}" rel="stylesheet">
