修改 session 有效期为12小时 in reading

--- a/reading/templates/upload.html
+++ b/reading/templates/upload.html
@@ -24,13 +24,13 @@
             <div class="form-group">
                <label for="inputName" class="col-sm-2 control-label">书名：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="name" class="form-control" id="inputName">
+                     <input type="text" name="name" class="form-control" id="inputName" required>
                   </div>
             </div>
             <div class="form-group">
                <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="author" class="form-control" id="inputauthor">
+                     <input type="text" name="author" class="form-control" id="inputauthor" required>
                   </div>
             </div>
              <div class="form-group">
@@ -43,12 +43,12 @@
             <div class="form-group">
                <label for="inputscore" class="col-sm-2 control-label">评分：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore">
+                     <input type="text" name="score" class="form-control" id="inputscore" placeholder="请输入0~10之间的整数." required>
                   </div>
             </div>
             <div class="form-group">
                <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
-               <input type="file" name="file" id="inputfile">
+               <input type="file" name="file" id="inputfile" required>
             </div>
             <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
