--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -64,7 +64,7 @@
             </div>
             <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">保存</button>
+                  <button type="submit" class="btn btn-primary">发布</button>
                </div>
             </div>
          </form>
@@ -91,7 +91,7 @@
       <td>Bangalore</td>
       <td>560001</td>
         <td>Tanmay</td>
-      <td>Bangalore</td>
+      <td><button type="button" class="btn btn-primary btn-small">送书</button></td>
       <td>560001</td>
     </tr>
     <tr>
@@ -99,7 +99,7 @@
       <td>Mumbai</td>
       <td>400003</td>
         <td>Tanmay</td>
-      <td>Bangalore</td>
+      <td><button type="button" class="btn btn-primary btn-small">送书</button></td>
       <td>560001</td>
     </tr>
     <tr>
@@ -107,7 +107,7 @@
       <td>Pune</td>
       <td>411027</td>
         <td>Tanmay</td>
-      <td>Bangalore</td>
+      <td><button type="button" class="btn btn-small btn-primary">送书</button></td>
       <td>560001</td>
     </tr>
   </tbody>
