--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -91,7 +91,7 @@
       <td>Bangalore</td>
       <td>560001</td>
         <td>Tanmay</td>
-      <td><button type="button" class="btn btn-primary btn-small">送书</button></td>
+      <td><button href="#" role="button" class="btn btn-primary btn-small">送书</button></td>
       <td>560001</td>
     </tr>
     <tr>
@@ -99,7 +99,7 @@
       <td>Mumbai</td>
       <td>400003</td>
         <td>Tanmay</td>
-      <td><button type="button" class="btn btn-primary btn-small">送书</button></td>
+      <td><button href="#" role="button" class="btn btn-primary btn-small">送书</button></td>
       <td>560001</td>
     </tr>
     <tr>
@@ -107,7 +107,7 @@
       <td>Pune</td>
       <td>411027</td>
         <td>Tanmay</td>
-      <td><button type="button" class="btn btn-small btn-primary">送书</button></td>
+      <td><button href="#" role="button" class="btn btn-small btn-primary">送书</button></td>
       <td>560001</td>
     </tr>
   </tbody>
