--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -57,9 +57,9 @@
                   </div>
             </div>
              <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">格式：</label>
+               <label for="inputformat" class="col-sm-2 control-label">格式：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" placeholder="请输入0~10之间的整数." required>
+                     <input type="text" name="format" class="form-control" id="inputformat" placeholder="请输入0~10之间的整数." required>
                   </div>
             </div>
             <div class="form-action form-group">
