add task in view

--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -87,7 +87,7 @@
                 <td>{{task.author}}</td>
                 <td>{{task.format}}</td>
                     {% if task.status == 0 %}
-                        <td><button href="/uploadfile/{{ task.booknam }}" role="button" class="btn btn-primary btn-small">送书</button></td>
+                        <td><button href="/uploadfile/{{ task.bookname }}" role="button" class="btn btn-primary btn-small">送书</button></td>
                     {% else %}
                         <td>完成</td>
                     {% endif %}
