add task in view

--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -107,7 +107,9 @@
       <td>Pune</td>
       <td>411027</td>
         <td>Tanmay</td>
-      <td><button href="#" role="button" class="btn btn-small btn-primary">送书</button></td>
+      <td><a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ book.name }}">
+                            <i class="fa fa-download" aria-hidden="true"></i>上传
+                        </a></td>
       <td>560001</td>
     </tr>
   </tbody>
