--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -80,7 +80,11 @@
                 <td>{{task.author}}</td>
                 <td>{{task.format}}</td>
                     {% if task.status == 0 %}
-                        <td><button href="/uploadfile/{{ task.bookname }}" role="button" class="btn btn-primary btn-small">送书</button></td>
+                        <td>
+                            <a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ task.bookname }}">
+                                <i class="fa fa-download" aria-hidden="true"></i>上传
+                            </a>
+                        </td>
                     {% else %}
                         <td>完成</td>
                     {% endif %}
